syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/supernode";

package supernode;

import "register_artwork.proto";

service ExternalDupeDetection {
    // Session informs primary supernode about its `nodeID` and `sessID` it wants
    // to connect to. The stream is used by the parties to inform each other about
    // the cancellation of the task.
    rpc Session(stream SessionRequest) returns(stream SessionReply);

    // SendDDTicketSignature send signature from supernodes mn2/mn3 for given reg NFT session id to primary supernode
    rpc SendDDTicketSignature(SendTicketSignatureRequest) returns (SendTicketSignatureReply);
}

message ExternalDupeDetectionReply {}

